This commit will fix spacing issues and add styling such as borders

--- a/css/main.css
+++ b/css/main.css
@@ -17,16 +17,12 @@ nav li a:hover {
   border-bottom: 2px solid #860927;
 }
 
-header img {
-  border-bottom: 2px solid #e2e2e2;
-}
-
 .title {
   border-bottom: 2px solid #e2e2e2;
+  border-top: 2px solid #e2e2e2;
 }
 
-.btn {
-  margin-left: .65rem;
+.btn-ghost {
   border: 2px solid #d89fb0;
   color: #b64c6e;
 }
@@ -35,4 +31,9 @@ header img {
   border-color: #860927;
   color: #860927;
   background-color: #d89fb0;
+}
+
+footer {
+  border-top: 2px solid #e2e2e2;
+  color: #666;
 }
